--- a/blog/2023-01-27-wellness-plan-spring-2023/index.qmd
+++ b/blog/2023-01-27-wellness-plan-spring-2023/index.qmd
@@ -16,7 +16,7 @@ knitr:
 
 ## Areas of Improvement
 
-Before I can design a wellness plan, I need to assess all areas of my life and see what I can work on improving. Below are a list areas that are important to me:
+Before designing a wellness plan, I need to assess all areas of my life and see what I can improve. Below is a list of areas that are important to me:
 
 ::: columns
 ::: {.column width="40%"}
@@ -40,11 +40,11 @@ Before I can design a wellness plan, I need to assess all areas of my life and s
 :::
 :::
 
-While there are many other aspects of my life that I would like to improve on, this is a good starting point in this semester.
+While there are many other aspects of my life that I would like to improve on, this is a good starting point for this semester.
 
 ## Goals
 
-Looking at the areas that I want to focus on, I want to create goals that are realistic to achieve. Additionally each goal can satisfy multiple aspects of my life. I am going to use [SMART](https://www.ucop.edu/local-human-resources/_files/performance-appraisal/How%20to%20write%20SMART%20Goals%20v2.pdf) goals to make sure I create achievable goals. The time span for all the goals is the Spring semester.
+Looking at the areas that I want to focus on, I want to create realistic goals. Additionally, each goal can satisfy multiple aspects of my life. I will use SMART goals to ensure [SMART](https://www.ucop.edu/local-human-resources/_files/performance-appraisal/How%20to%20write%20SMART%20Goals%20v2.pdf) goals to make sure I create achievable goals. The period for all the goals is the Spring semester.
 
 ::: panel-tabset
 ## Goal 1
@@ -52,37 +52,37 @@ Looking at the areas that I want to focus on, I want to create goals that are re
 ::: {.callout-note icon="false"}
 ## Goal
 
-I will spend at least 1 hour every day, Mondays through Friday, working on research related to my dissertation.
+I will spend at least 1 hour every day, Monday through Friday, working on research related to my dissertation.
 :::
 
-I would like to increase my research productivity for my own career goals. Additionally, working on this will help me through my tenured process.
+I want to increase my research productivity for my own career goals. Additionally, working on this will help me through my tenure process.
 
 ## Goal 2
 
 ::: {.callout-note icon="false"}
 ## Goal
 
-Each month, I will learn how to create a new tea-related beverage at home.
+I will learn how to create a new tea-related beverage at home each month.
 :::
 
-This goal has a potential to serve 3 aspects of my life: Physical, Environmental, and Financial. Learning how to create new tea drinks will allow me to save money instead of going out to buying them form different coffee shops. Additionally, I will have knowledge on what ingredients are being used in the drinks. Therefore, I will be able to improve the physical aspect of my life. Lastly, this will help the environmental aspect of my life by reducing my environmental impact and use less plastic.
+This goal has the potential to serve three aspects of my life: Physical, Environmental, and Financial. Learning how to create new tea drinks will allow me to save money instead of buying them from different coffee shops. Additionally, I will know what ingredients are used in the drinks. Therefore, I will be able to improve the physical aspect of my life. Lastly, this will help the environmental part of my life by reducing my environmental impact and using less plastic.
 
 ## Goal 3
 
 ::: {.callout-note icon="false"}
 ## Goal
 
-Each month, I will travel to a new city in Southern CA and buy their local newspaper.
+I will travel to a new city in Southern CA each month and buy their local newspaper.
 :::
 
-One of my main goal is to travel more globally and locally. I especially want to get to know small communities located in Southern California. For that reason, I want to make an effort to explore more of Southern CA. This goal has the potential to affect 4 aspects of my life: mental, social, spiritual and physical.
+One of my main goals is to travel more globally and locally. I especially want to get to know small communities located in Southern California. For that reason, I want to make an effort to explore more of Southern CA. This goal has the potential to affect four aspects of my life: mental, social, spiritual, and physical.
 
 ## Goal 4
 
 ::: {.callout-note icon="false"}
 ## Goal
 
-I will go swimming 2 times a week for 30 minutes.
+I will go swimming two times a week for 30 minutes.
 :::
 
 When I was planning to move to Camarillo, I wanted to start something new for my physical health. Therefore, I decided to start swimming.
@@ -92,10 +92,10 @@ When I was planning to move to Camarillo, I wanted to start something new for my
 ::: {.callout-note icon="false"}
 ## Goal
 
-I will go to the gym 3 times a week for 1 hour.
+I will go to the gym three times a week for 1 hour.
 :::
 
-Similar to swimming, I want to develop new habits and exercise more. Developing the habit and go to gym more will help my physical health.
+Similar to swimming, I want to develop new habits and exercise more. Developing this habit and going to the gym more will help my physical health.
 :::
 
 ## Plan
@@ -103,29 +103,31 @@ Similar to swimming, I want to develop new habits and exercise more. Developing 
 ::: panel-tabset
 ## Goal 1
 
-Since I am struggling to keep me research productivity up, I am going try new strategies. In order to get more research done, my plan is to work on research the very first thing I do when I get into my office. If I complete this task at the beginning of my day, I will get it out of the way and I will focus on things that are easier for me. The idea is, for the things I struggle to do, I will do them at the very beginning of my day.
+Since I am struggling to keep my research productivity up, I will try new strategies. To get more research done, I plan to work on research as the very first thing I do when I get into my office. If I complete this task at the beginning of my day, I will get it out of the way and focus on things that are easier for me. The idea is to do the things I struggle with at the very beginning of my day.
 
-Additionally, I plan to use the [Forest App](https://www.forestapp.cc/) to maintain my focus. I will do a 20 minute session of writing[^1] then do a 10 minute break. I will repeat this process until I complete an hour of writing.
+Additionally, I plan to use the [Forest App](https://www.forestapp.cc/) to maintain my focus. I will do a 20 minute session of writing[^1] and then do a 10 minute break. I will repeat this process until I complete an hour of writing.
 
 ## Goal 2
 
-As of right now, I am working on learning how to make a chai latte at home. So far I have learned how to make oat milk the way I like it. The next thing I want to do is make chai concentrate using raw ingredients. I have bought many of the tools and feel ready to start experimenting making the concentrate.
+Right now, I am working on learning how to make a chai latte at home. So far, I have learned how to make oat milk how I like it. Next, I want to make chai concentrate using raw ingredients. I have bought many of the tools and feel ready to start experimenting with making the concentrate.
 
 Other types of teas that I want to learn are hibiscus and Thai.
 
 ## Goal 3
 
-I first plan to visit Ojai in February. Depending on the weather, I want to visit Twentynine Palms for the [super bloom](https://sandiegoexplorer.com/california-wildflowers-california-superbloom/); otherwise, I will visit Carpinteria. Lastly, I want to visit Idyllwild. For each location, I want to visit a special event/festival if possible.
+I first plan to visit Ojai in February. Depending on the weather, I want to visit Twentynine Palms for the [super bloom](https://sandiegoexplorer.com/california-wildflowers-california-superbloom/); otherwise, I will visit Carpinteria. Lastly, I want to visit Idyllwild. I want to visit a special event/festival for each location if possible.
 
 ## Goal 4
 
+Because I set this goal for two 30 minute sessions, I believe I can complete this task. It is easier to spend a quick 30 minute session than a full hour.
+
 ## Goal 5
 
-Similar to research goals, my plan is to go to the gym in the morning and get them done early so I can focus on other things I am interested in. I plan to go to the gym early in morning every Monday, Tuesday, and Wednesday. This task will be before my writing sessions.
+Similar to my research goals, I plan to go to the gym in the morning and get them done early so I can focus on other things I am interested in. I plan to go to the gym early every Monday, Tuesday, and Wednesday. This task will be before my writing sessions.
 :::
 
 [^1]: writing means any task related to research
 
 ## Accountability
 
-There are two ways that I will try told hold myself accountable. First, I will share my wellness plan with friends and family members. Second, I will try to create an incentive plan for each goal that I complete. Right before spring break (3/17/23), I will reassess my goals and adjust accordingly. Overall, I want to create consistency with these goals. Any positive gain will be a win.
+There are two ways that I will try told hold myself accountable. First, I will share my wellness plan with friends and family members. Second, I will create an incentive plan for each goal I complete. I will reassess my goals before spring break (3/17/23) and adjust accordingly. Overall, I want to create consistency with these goals. Any positive gain will be a win. At the end of the semester, I plan to reflect on the process and see what worked and what did not.
