--- a/pres/ci_spring_2023/pres_4_23.qmd
+++ b/pres/ci_spring_2023/pres_4_23.qmd
@@ -8,6 +8,7 @@ format:
       pointerSize: 32
     incremental: true
     theme: dark
+    scrollable: true
 knitr:
   opts_chunk: 
     echo: false
@@ -77,7 +78,7 @@ ggplot(dat, aes(x = ID, y = t1, shape = ifelse(censored, "Death", "Censored"))) 
 ```{r}
 library(ggplot2)
 dat <- data.frame(ID = 1:10, 
-                  t1 = c(7, 9, 10, 4, 2, 10, 3, 6, 6, 7) , 
+                  t1 = c(7, 9, 10, 5, 5, 10, 5, 6, 6, 7) , 
                   censored = c(1, 1, 1, 0, 0, 1, 0, 1, 1, 1))
 # Use ggplot to plot data from dat object
 ggplot(dat, aes(x = ID, y = t1, shape = ifelse(censored, "Death", "Censored"))) + geom_point(size = 4) + 
@@ -426,12 +427,15 @@ df_colon %$% survfit(Surv(time, status) ~ surg)  %>%
 ## Fitting Cox PH Model
 
 ::: panel-tabset
+
 ## Code
 
 ```{r}
 #| echo: true
 #| eval: false
-df_colon %$% coxph(Surv(time, status) ~ surg)  %>% 
+
+
+df_colon %$% coxph(Surv(time, status) ~ surg)  %>% #<1>
   summary
 ```
 
