--- a/pres/ci_spring_2023/pres_4_23.qmd
+++ b/pres/ci_spring_2023/pres_4_23.qmd
@@ -10,7 +10,7 @@ format:
     scrollable: true
 knitr:
   opts_chunk: 
-    echo: false
+    echo: true
     eval: true
     message: false
     warnings: false
@@ -26,33 +26,27 @@ filters:
 ## Study Example
 
 ::: incremental
-
 -   Acute Myelogenous Leukemia (AML) is a blood and bone marrow cancer that makes abnormal blood cells. This is the most common Leukemia found in adults.
 
 -   There are several factors that affect the prognosis (survival rate) of those with AML.
 
 -   **How do we determine the survival rate of AML patients?**
-
 :::
 
 ## How do determine the survival rate?
 
 ::: incremental
-
 -   Measure from diagnosis to event of interest
 
 -   Construct a probability of surviving up to a certain time point
-
 :::
 
 ## Data Type
 
 ::: incremental
-
 -   Data is typically recorded as time-to-event data.
 
 -   For biomedical studies, researchers are interested in time from diagnosis to death, known as time-to-death.
-
 :::
 
 # Censoring
@@ -60,13 +54,11 @@ filters:
 ## Censoring
 
 ::: incremental
-
 -   Censoring is a mechanism in biomedical studies where we do not observe the true time-to-death.
 
 -   Not all the time is observed.
 
 -   Three common types of censoring mechanisms: *Right, Left,* and *Interval.*
-
 :::
 
 ## Left Censoring
@@ -76,23 +68,13 @@ library(ggplot2)
 dat <- data.frame(ID = 1:10, 
                   t1 = c(7, 9, 10, 5, 5, 10, 5, 6, 6, 7) , 
                   censored = c(1, 1, 1, 0, 0, 1, 0, 1, 1, 1))
-# Use ggplot to plot data from dat object
 ggplot(dat, aes(x = ID, y = t1, shape = ifelse(censored, "Death", "Censored"))) + geom_point(size = 4) + 
-    # Plot solid line representing non-interval censored time from 0 to t1
     geom_linerange(aes(ymin = 0, ymax = t1)) +
     geom_hline(yintercept = 5, lty = 2) +
-    # Plot line (dotted for censored time) representing time from t1 to t2    # Plot points representing event
-    # The ifelse() function moves censored marker to middle of interval
-    # # Flip coordinates
     coord_flip() + 
-    # # Add custom name to linetype scale, 
-    # # otherwise it will default to "as.factor(censored))"
-    # # Add custom shape scale.  Change the values to get different shapes.
     scale_shape_manual(name = "Event", values = c(19, 15)) +
-    # # Add main title and axis labels
-    ggtitle("Left Censoring") + xlab("Patient ID") +  ylab("Days") + 
-    # # I think the bw theme looks better for this graph, 
-    # # but leave it out if you prefer the default theme
+    ggtitle("Left Censoring") + 
+    xlab("Patient ID") +  ylab("Days") + 
     theme_bw()
 
 ```
@@ -106,35 +88,23 @@ dat <- structure(list(ID = 1:5, eventA = c(0L, 1L, 1L, 0L, 1L),
     8), censored = c(0, 0, 0, 0, 1)), .Names = c("ID", "eventA", 
     "eventB", "t1", "t2", "censored"), class = "data.frame", row.names = c(NA, -5L))
 
-# Create event variable
 dat$event <- with(dat, ifelse(eventA, "Censored", "Death"))
 
-# Create id.ordered, which is a factor that is ordered by t2
-# This will allow the plot to be ordered by increasing t2, if desired
 dat$id.ordered <- factor(x = dat$ID, levels = order(dat$t2, decreasing = T))
 
-# Use ggplot to plot data from dat object
 ggplot(dat, aes(x = id.ordered)) + 
-    # Plot solid line representing non-interval censored time from 0 to t1
     geom_linerange(aes(ymin = 0, ymax = t1)) + 
-    # Plot line (dotted for censored time) representing time from t1 to t2
-    geom_linerange(aes(ymin = t1, ymax = t2, linetype = as.factor(censored))) +  
-    # Plot points representing event
-    # The ifelse() function moves censored marker to middle of interval
-    geom_point(aes(y = ifelse(censored, t1 + (t2 - t1) / 2, t2), shape = event), 
-        size = 4) +
-    # Flip coordinates
+    geom_linerange(aes(ymin = t1, ymax = t2, 
+                       linetype = as.factor(censored))) +  
+    geom_point(aes(y = ifelse(censored, 
+                              t1 + (t2 - t1) / 2, t2), 
+                   shape = event), size = 4) +
     coord_flip() + 
-    # Add custom name to linetype scale, 
-    # otherwise it will default to "as.factor(censored))"
     scale_linetype_manual(name = "Censoring", values = c(1, 2), 
         labels = c("Not censored", "Interval censored")) +
-    # Add custom shape scale.  Change the values to get different shapes.
     scale_shape_manual(name = "Event", values = c(19, 15)) +
-    # Add main title and axis labels
-    ggtitle("Interval Censoring") + xlab("Patient ID") +  ylab("Days") + 
-    # I think the bw theme looks better for this graph, 
-    # but leave it out if you prefer the default theme
+    ggtitle("Interval Censoring") + 
+    xlab("Patient ID") +  ylab("Days") + 
     theme_bw()
 ```
 
@@ -145,32 +115,22 @@ library(ggplot2)
 dat <- data.frame(ID = 1:10, 
                   t1 = c(7, 9, 10, 4, 2, 10, 8, 5, 6, 7) , 
                   censored = c(0, 1, 0, 0, 1, 0, 0, 1, 0, 1))
-# Use ggplot to plot data from dat object
-ggplot(dat, aes(x = ID, y = t1, shape = ifelse(censored, "Death", "Censored"))) + geom_point(size = 4) + 
-    # Plot solid line representing non-interval censored time from 0 to t1
+ggplot(dat, aes(x = ID, y = t1, 
+                shape = ifelse(censored, "Death", "Censored"))) +
+    geom_point(size = 4) + 
     geom_linerange(aes(ymin = 0, ymax = t1)) +
     geom_hline(yintercept = 10, lty = 2) +
-    # Plot line (dotted for censored time) representing time from t1 to t2    # Plot points representing event
-    # The ifelse() function moves censored marker to middle of interval
-    # # Flip coordinates
     coord_flip() + 
-    # # Add custom name to linetype scale, 
-    # # otherwise it will default to "as.factor(censored))"
-    # # Add custom shape scale.  Change the values to get different shapes.
     scale_shape_manual(name = "Event", values = c(19, 15)) +
-    # # Add main title and axis labels
-    ggtitle("Right Censoring") + xlab("Patient ID") +  ylab("Days") + 
-    # # I think the bw theme looks better for this graph, 
-    # # but leave it out if you prefer the default theme
+    ggtitle("Right Censoring") + 
+    xlab("Patient ID") +  ylab("Days") + 
     theme_bw()
 
 ```
 
-
 ## Censoring
 
 ::: incremental
-
 -   Censoring affects the time-to-death information
 
 -   However, we obtain some information when data is censored
@@ -180,13 +140,11 @@ ggplot(dat, aes(x = ID, y = t1, shape = ifelse(censored, "Death", "Censored"))) 
 -   Censoring is independent of time-to-death generation
 
 -   Right Censoring
-
 :::
 
 ## Data Construction
 
 ::: incremental
-
 -   $T_i^*$: True time-to-event
 
 -   $C_i$: Censoring Time
@@ -194,7 +152,6 @@ ggplot(dat, aes(x = ID, y = t1, shape = ifelse(censored, "Death", "Censored"))) 
 -   $T_i=\min(T_i^*,C_i)$: Observed time-to-event
 
 -   $\delta_i = I(T_i^*<C_i)$: Event indicator
-
 :::
 
 # Survival Analysis Functions
@@ -242,13 +199,11 @@ $$
 ## Survival Curve
 
 ::: incremental
-
 -   The survival curve will determine what is the probability of suriving up to a certain time.
 
 -   A survival curve uses both censored and uncensored data
 
 -   A survival curve can be used to determine the median survival time of a disease
-
 :::
 
 ## Data
