--- a/pres/long_beach/pres_4_22.qmd
+++ b/pres/long_beach/pres_4_22.qmd
@@ -24,6 +24,10 @@ filters:
 
 ## Access Presentation
 
+https://www.inqs.info/pres/long_beach/pres_4_22.html#/title-slide
+
+Email: isaac.qs@csuci.edu
+
 # Background Information
 
 ## Survival Analysis
