--- a/photos/gregory/index.qmd
+++ b/photos/gregory/index.qmd
@@ -5,7 +5,8 @@ image: "img/LG1.jpg"
 
 format: html
 knitr: 
-  opts_chunk: 
+  opts_chunk:
+    echo: false 
     eval: true
     message: false
     
